# Puzzle

./: CMakeLists.txt  ShuffleAlgorithm.h  animatedtile.cpp  animatedtile.h  board.cpp  board.h  boardwidget.cpp  boardwidget.h  game.cpp  game.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  movingtile.cpp  movingtile.h  newgamedialog.cpp  newgamedialog.h  newgamedialog.ui  previewwindow.cpp  previewwindow.h  resources.qrc  selectabletile.cpp  selectabletile.h  tile.cpp  tile.h
cli/: consoleui.cpp  consoleui.h
